# email-service-app

./: .gitignore  README.md  docker-compose.yml
email-service-client/: .eslintrc.cjs  Dockerfile  bun.lockb  config.js  index.html  package.json  tsconfig.json  vite.config.ts
email-service-client/src/: App.tsx  main.tsx
email-service-client/src/components/: index.ts
email-service-client/src/components/AlertNotification/: index.tsx
email-service-client/src/components/EmailDetails/: index.tsx
email-service-client/src/components/EmailSender/: index.tsx
email-service-client/src/hooks/: useGetEmails.ts
email-service-client/src/models/: index.ts
email-service-client/src/styles/: App.css  index.css
email-service-server/: bun.lockb  package.json
email_server/: .env.templae  .gitignore  Cargo.toml  Dockerfile
email_server/src/: email_utils.rs  handlers.rs  main.rs  models.rs
