[package]
name = "email_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre = { version = "0.10", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15"
actix-cors = "0.6"


